--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Personel website of Harsh Raj Patowary" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>廾arsh's Website</title>
 
 </head>
